--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFlRXZjAiznr17pMutCsJyO0py5rudDFM&libraries=places&callback=initMap" async defer></script>
 </head>
 <body>
-    <div id="map"></div>
-    <input type="text" id="search-input" placeholder="Search for a marker..." class="search-box">
+    <div id="content">
+        <p id="heading">Demo marker search</p>
+        <div class="contain">
+            <div id="map"></div>
+            <input type="text" id="search-input" placeholder="Search for a marker..." class="search-box">
+        </div>
+    </div>
 </body>
 </html>
